[package]
name = "zoomerjoin"
version = "0.1.0"
edition = "2021"
authors = ["Beniamino Green <beniamino.green@yale.edu>"]
rust-version = "1.70.0"

[lib]
crate-type = ["staticlib"]
name = "zoomerjoin"

[dependencies]
dashmap = { version = "6.1.0", features = ["inline"] }
extendr-api = { version = "0.8.0", features = ["ndarray"] }
itertools = "0.14.0"
ndarray = { version = "0.16.1", features = ["rayon"] }
ndarray-rand = "0.15.0"
nohash-hasher = "0.2.0"
rand = "0.8.5"
rayon = "1.10.0"
rustc-hash = "2.1.1"


